fix: sp-5278 portal dropdown menu to body to escape overflow hidden container

--- a/frontend/src/components/UI/Dropdown/Dropdown.module.scss
+++ b/frontend/src/components/UI/Dropdown/Dropdown.module.scss
@@ -30,20 +30,6 @@
         }
     }
 
-    > .OptionsList {
-        position: absolute;
-        top: calc(100% + 0.125rem);
-        left: -0.125rem;
-        min-width: calc(100% + 0.25rem);
-        max-width: calc(100% + 0.25rem);
-        max-height: 15rem;
-        overflow: auto;
-        z-index: 10;
-
-        &:hover {
-            cursor: initial;
-        }
-    }
 
     &:hover {
         cursor: pointer;
@@ -129,4 +115,10 @@
             right: 0.3445rem;
         }
     }
+}
+
+.PortalMenu {
+    max-height: 15rem;
+    overflow: auto;
+    z-index: 1000;
 }
